Update condition radio content CSS to avoid overlap of elements

--- a/src/components/radios/_radios.scss
+++ b/src/components/radios/_radios.scss
@@ -143,6 +143,7 @@
     margin-left: $conditional-margin-left;
     padding-left: $conditional-padding-left;
     border-left: $conditional-border-width solid $govuk-border-colour;
+    clear: left;
 
     &[aria-hidden="true"] {
       display: none;
